--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,12 @@ body {
     text-wrap: balance;
   }
 }
+
+main{
+  background-image: url(/background.png);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    /* Supondo que a altura total da viewport seja desejada */
+}
